hopefully fixed on iphone

--- a/static/carousel.css
+++ b/static/carousel.css
@@ -240,3 +240,8 @@ body {
     margin: 0 auto;
     padding-top: 30px;
 }
+
+.thumb {
+    width: 170px;
+    height: 170px;
+}
